--- a/ollama_chat_ui/index.html
+++ b/ollama_chat_ui/index.html
@@ -5,12 +5,12 @@
     <title>Ollama Chat UI</title>
 
     <!-- External CSS -->
-    <link rel="stylesheet" href="style.css">
+<!--    <link rel="stylesheet" href="style.css">-->
 <!--    <link rel="stylesheet" href="style_v1.css">-->
 <!--    <link rel="stylesheet" href="style_window_fluent.css">-->
 <!--    <link rel="stylesheet" href="style_chatGPT.css">-->
 <!--    <link rel="stylesheet" href="style_discord.css">-->
-<!--    <link rel="stylesheet" href="style_imessage.css">-->
+    <link rel="stylesheet" href="style_imessage.css">
 
 </head>
 
