updated README file

--- a/ollama_chat_ui/index.html
+++ b/ollama_chat_ui/index.html
@@ -8,7 +8,10 @@
     <!-- Load CSS from FastAPI static folder -->
     <!-- <link rel="stylesheet" href="/static/style.css"> -->
     <link rel="stylesheet" href="/static/style_imessage.css">
-
+<!--    <link rel="stylesheet" href="/static/style_chatGPT.css">-->
+<!--    <link rel="stylesheet" href="/static/style_discord.css">-->
+<!--    <link rel="stylesheet" href="/static/style_window_fluent.css">-->
+<!--    <link rel="stylesheet" href="/static/style_v1.css">-->
 
     <!-- Highlight.js (optional but recommended) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
